fix(search-page): scrolling on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -125,6 +125,15 @@ $bpMobileMin: 320px;
   }
 }
 
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.5s;
+}
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+}
+
 .clickable {
   cursor: pointer;
 }
